--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,6 +50,10 @@
     border-color: var(--light-blue)
 }
 
+.rounded-2borders {
+    border-radius: 0 0 20px 20px;
+}
+
 .button {
     font-family: Nunito;
     font-weight: 800;
