--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,7 +54,6 @@
 
 .inputfieldWhite {
     width: 100%;
-    height: 3rem;
     border-width: 2px;
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -63,6 +62,8 @@
     border-radius: 1rem;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+    background-color: var(--dark-light);
+    border-color: var(--dark-light);
 }
 
 .inputfieldRed {
@@ -75,7 +76,7 @@
     border-color: var(--def-green);
 }
 
-.inputfield:focus {
+.inputfield:focus, .inputfieldWhite:focus {
     border-color: var(--light-blue)
 }
 
@@ -124,6 +125,10 @@
     transition-duration: 150ms;
 }
 
+.bg-blue-op-60 {
+    background-color: rgba(67, 97, 238, 0.6);
+}
+
 .blue_button {
     border-color: var(--def-blue);
     color: var(--white);
@@ -142,4 +147,29 @@
 
 .grey_button:hover {
     background-color: var(--dark-light);
+}
+
+.loader {
+	border-top-color: var(--def-yellow);
+	-webkit-animation: spinner 1.5s linear infinite;
+	animation: spinner 1.5s linear infinite;
+    border-width: 4px;
+}
+
+@-webkit-keyframes spinner {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
+}
+
+@keyframes spinner {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
