--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,12 +7,14 @@
     --light-blue: #799DE8;
     --dark-blue: #0D248C;
     --white: #FFFFFF;
+    --black: #181925;
     --def-light: #F8F9FB;
     --dark-light: #ECEEF8;
-    --darker-light: #E2E4EE;
+    --darker-light: #eef0f6;
     --def-yellow: #FFCF2D;
-    --def-grey: #B7B8C3;
-    --dark-grey: #464E74;
+    --light-yellow: #F5E86A;
+    --def-grey: #B7B7B7;
+    --dark-grey: #605F5F;
     --dark-red: #FF4733;
     --def-red: #FF8173;
     --light-red: #FFB6AD;
@@ -81,7 +83,19 @@
 }
 
 .rounded-2borders {
-    border-radius: 0 0 20px 20px;
+    border-radius: 0 0 40px 40px;
+}
+
+.rounded-2rborders {
+    border-radius: 40px 0 0 40px;
+}
+
+.rounded-2lborders {
+    border-radius: 0 40px 40px 0;
+}
+
+.h-body {
+    height: calc(100% - 5rem);
 }
 
 .posIconSenha {
@@ -145,6 +159,31 @@
     background-color: var(--def-light);
 }
 
+.answer_button {
+    font-weight: 800;
+    border-radius: 2rem;
+    border-width: 2px;
+    cursor: pointer;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    padding-left: 0.6rem;
+    padding-right: 0.6rem;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    border-color: var(--darker-light);
+    color: var(--dark-grey);
+    background-color: var(--darker-light);
+}
+
+.answer_button:hover {
+    background-color: var(--def-blue);
+    color: var(--white)
+}
+
 .grey_button:hover {
     background-color: var(--dark-light);
 }
@@ -173,3 +212,60 @@
 		transform: rotate(360deg);
 	}
 }
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 2.4rem;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--darker-light);
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 50%;
+    left: 0;
+    bottom: 0;
+    background-color: var(--def-blue);
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+  
+  /* Rounded sliders */
+  .slider.round, .slider.round:before {
+    border-radius: 10px;
+  }
+
+  .names {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    user-select: none;
+  }
