--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,10 @@
     }
 }
 
+.w-scrollMaterias {
+    width: calc(100vw - 2rem);
+}
+
 .red-icon {
     font-size: 1.1rem;
     color: var(--def-grey);
@@ -210,84 +214,33 @@
     background-color: var(--dark-light);
 }
 
-.loader {
-	border-top-color: var(--def-yellow);
-	-webkit-animation: spinner 1.5s linear infinite;
-	animation: spinner 1.5s linear infinite;
-    border-width: 4px;
-}
-
-@-webkit-keyframes spinner {
-	0% {
-		-webkit-transform: rotate(0deg);
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-	}
-}
-
-@keyframes spinner {
-	0% {
-		transform: rotate(0deg);
-	}
-	100% {
-		transform: rotate(360deg);
-	}
-}
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
-    display: inline-block;
+  .showMore {
     width: 100%;
-    height: 2.4rem;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
+    background-color: var(--white);
+    border-radius: 9999px;
+    font-weight: 600;
     cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--darker-light);
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 100%;
-    width: 50%;
-    left: 0;
-    bottom: 0;
-    background-color: var(--def-blue);
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(100%);
-    -ms-transform: translateX(100%);
-    transform: translateX(100%);
-  }
-  
-  /* Rounded sliders */
-  .slider.round, .slider.round:before {
-    border-radius: 10px;
+    color: var(--def-blue);
+    padding: 0.5rem;
+    font-size: 1.125rem;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    justify-items: center;
   }
 
-  .names {
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
-    user-select: none;
+  .inverter {
+    --tw-invert: invert(0)
+  }
+
+  .inverter:hover {
+    --tw-invert: invert(1)
+  }
+
+  .showMore:hover {
+    background-color: var(--def-blue);
+    color: var(--white);
   }
